cleaned up goals list so all goals can be added, modified and seen in one page.

--- a/templates/makegoal.html
+++ b/templates/makegoal.html
@@ -5,55 +5,32 @@ Make a goal
 {% endblock %}
 
 {% block main %}
+<script src="/static/goals.js"></script>
 
 <table class = "table">
     <thead>
         <tr>
-            <th>
-                Goal
-            </th>
-            <th>
-                Completion status
-            </th>
-            <th>
-                Acceptance status
-            </th>
-            <th>
-                Start time
-            </th>
-            <th>
-                End time
-            </th>
+            <th>#</th>
+            <th>Goal</th>
+            <th>Completion status</th>
+            <th>Acceptance status</th>
+            <th>Start time</th>
+            <th>End time</th>
+            <th>Action</th>
+            <th>Time taken</th>
+            <th>Delete task</th>
         </tr>
     </thead>
-    <tbody>
-        {% for goal in goals %}
-        <tr>
-            <td>
-                {{ goal.goalDescription }}
-            </td>
-            <td>
-                {{ goal.completionStatus }}
-            </td>
-            <td>
-                {{ goal.acceptanceStatus }}
-            </td>
-            <td>
-                {{ goal.timeStart }}
-            </td>
-            <td>
-                {{ goal.timeEnd }}
-            </td>
-        </tr>
-        {% endfor %}
+    <tbody class="mygoals">
     </tbody>
 </table>
 
 
-<form action="/makegoal" method="post">
-    <div class="mb-3">
-        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" name="goalDescription" placeholder="What's your goal?" type="text">
-    </div>
-    <button class="btn btn-primary" type="submit">Submit goal</button>
-</form>
+
+<input id="newGoalDescription" placeholder="Add a new goal."/>
+<button id="addNewGoalButton">Add goal</button>
+
+
 {% endblock %}
+
+
