fixed goal list, wallet calculations, and wishlist so that it uses javascript files.

--- a/templates/maingoalpage.html
+++ b/templates/maingoalpage.html
@@ -5,6 +5,8 @@ Make a goal
 {% endblock %}
 
 {% block main %}
+
+<script src="/static/timefunctions.js"></script>
 <script src="/static/goals.js"></script>
 
 <table class = "table">
