--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,12 +34,11 @@
                             Hello {{ session["user_name"] }}
                         </ul>
                         <ul class="navbar-nav me-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/makegoal">Your goals</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/maingoalpage">Your goals</a></li>
                             <li class="nav-item"><a class="nav-link" href="/partnerlist">Your partners</a></li>
                             <li class="nav-item"><a class="nav-link" href="/seePartnerGoals">See people's goals</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/seewallets">See people's wallets</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/seewallets">See wallets</a></li>
                             <li class="nav-item"><a class="nav-link" href="/findpartner">Find a partner</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/wallet">Wallet</a></li>
                             <li class="nav-item"><a class="nav-link" href="/wishlist">Wishlist</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
