--- a/templates/seewallets.html
+++ b/templates/seewallets.html
@@ -21,6 +21,11 @@ See wallets of your partners
             </tr>
         {% endfor %}
 
+        <tr>
+            <td>You</td>
+            <td>{{ wallet }} euro</td>
+        </tr>
+
     </tbody>
 </table>
 
