--- a/templates/wishlist.html
+++ b/templates/wishlist.html
@@ -5,24 +5,27 @@ Your wishlist
 {% endblock %}
 
 {% block main %}
+<script src="/static/wishlist.js"></script>
+
 <table class = "table">
     <thead>
         <tr>
-            <th>
-                Item
-            </th>
-            <th>
-                Price
-            </th>
-            <th>
-                Status
-            </th>
-            <th>
-                Action
-            </th>
+            <th>Item</th>
+            <th>Wish</th>
+            <th>Price</th>
+            <th>Status</th>
+            <th>Action</th>
         </tr>
     </thead>
-    <tbody>
+    <tbody class="myWishlist"></tbody>
+</table>
+
+<input autocomplete="off" autofocus class="form-control mx-auto w-auto" name="newWishDesc" id="newWishDesc" placeholder="Enter item" type="text">
+<input autocomplete="off" autofocus class="form-control mx-auto w-auto" name="newwishprice" id="newwishprice" placeholder="Enter price" type="text">
+<button id="addNewWishButton">Add goal</button>
+
+{% endblock %}
+<!--
         {% for wish in wishes %}
         <tr>
             <td>
@@ -49,8 +52,6 @@ Your wishlist
             </td>
         </tr>
         {% endfor %}
-    </tbody>
-</table>
 
 <form action="/addwish" method="post">
     <div class="mb-3">
@@ -59,6 +60,4 @@ Your wishlist
     </div>
     <button class="btn btn-primary" type="submit">Add to wishlist</button>
 </form>
-
-
-{% endblock %}
+-->
