--- a/templates/findpartner.html
+++ b/templates/findpartner.html
@@ -5,77 +5,13 @@
 {% endblock %}
 
 {% block main %}
+<script src = "/static/findpartner.js"></script>
 <input autocomplete="off" class="typedName" autofocus placeholder="Enter partner username" type="text">
 <br>
 
 <p></p>
 
-<script>
-    let name = document.querySelector('.typedName');
-    name.addEventListener('input', async function() {
-        let response = await fetch('/searchpartner?searchname=' + name.value);
-        let partners = await response.json();
-        let html = '';
-        for (let id in partners) {
-            let username = partners[id].username;
-            let idvalue = partners[id].id;
 
-            html += 'Found ' + username + '.' + '<br>'
-            + '<button class="add-partner-action"' + 'partner-id=' + '"' + idvalue + '"' + '>'
-            + 'Request partnership?' + '</button>'
-            + '<br>';
-        }
-        document.querySelector('p').innerHTML = html;
-        createButtonClickListeners()
-    });
-
-    function createButtonClickListeners() {
-        document
-        .querySelectorAll('.add-partner-action')
-        .forEach(button => {
-            button.addEventListener('click', async function(event) {
-                let actionButton = this;
-                let partnerId = actionButton.getAttribute('partner-id');
-
-                let response = await fetch('/addpartner-json', {
-                    method: 'POST',
-                    headers: {
-                        "Content-Type": "application/json",
-                    },
-                    body: JSON.stringify({
-                        "id": partnerId,
-                    })
-                });
-
-                let serverJson = await response.json();
-                actionButton.innerHTML = serverJson.message;
-                actionButton.disabled = true;
-            });
-        });
-    }
-
-</script>
 {% endblock %}
-
-
-<!--
-
-<form action="/findpartner" method="get">
-    <input autocomplete="off" autofocus placeholder="Enter partner username" id="p" name = "p" type="text">
-    <button type="submit">Search</button>
-</form>
-
-<br><br>
-{% for partner in partners %}
-{% if partner.username != session["user_name"] %}
-<form action="/addpartner" method="post">
-    Found {{ partner.username }}.
-    <button type="submit" id="found_partner" name="found_partner" value="{{ partner.id }}">Request partnership?</button>
-</form>
-{% endif %}
-<br>
-{% endfor %}
--->
-
 
 
