added transaction table and fixed wallet calculations in SQL queries

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,15 @@
     <figcaption class="blockquote-footer">
         Some guy probably
     </figcaption>
-    </figure>
+</figure>
+
+<br>Project name: Accountability app
+<br>Name: Hoyeon Yoo
+<br>Github username: holly394
+<br>edX username: hollzedx
+<br>City & country: Hamburg, Germany
+<br>Date of recording: 17 December 2024
+<br><br>
 
 <br><h1 class="display-6">An endless to-do list but not enough gratification?</h1>
 <br><img src="/static/luis_villasmil_unsplash.jpg" class="img-fluid" width="400" height="200" alt="man with sticky notes covering his face looking overwhelmed from https://unsplash.com/photos/people-sitting-on-chair-with-brown-wooden-table-mlVbMbxfWI4">
@@ -33,7 +41,6 @@
 <br><br>After you've completed your task, you can set it to "Completed",
 <br>but it will still need to be accepted by one of your partners
 <br>for your achievements to go into your wallet.
-<br>---maybe have a way for partners to edit allocated time before accepting--
 
 <br><br>What is your wallet? It's a virtual account that calculates the time you put
 <br>into your tasks with the minimum wage in your area.
